// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailMonument rendering should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <img
      alt="Panoramabeeld"
      className="map-detail-result__header-pano"
      src="panoUrl"
    />
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Monument
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Monument label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Nummer"
      value="ABC123"
    />
    <MapDetailResultItem
      label="Type"
      value="Monument type"
    />
    <MapDetailResultItem
      label="Status"
      value="Monument status"
    />
  </ul>
</section>
`;

exports[`MapDetailMonument rendering should render without pano url 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Monument
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Monument label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Nummer"
      value="ABC123"
    />
    <MapDetailResultItem
      label="Type"
      value="Monument type"
    />
    <MapDetailResultItem
      label="Status"
      value="Monument status"
    />
  </ul>
</section>
`;
